# sentry_notion_issues

./: .dockerignore  .env  .env.test  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: main.py  settings.py
src/notion/: client.py  types.py  utils.py
src/sentry/: sentry_ui_schema.json  types.py  utils.py
src/sentry_notion_issues.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/api/: create_issue_test.py  get_users_test.py  link_issue_test.py  search_issues_test.py
tests/notion_client/: client_test.py
